--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   web:
     build: .
     container_name: web
-    command: bundle exec "rails db:create && rails db:migrate && rails db:seed && rails s -b 0.0.0.0"
+    command: bundle exec "rails s -b 0.0.0.0"
     env_file: .env
     ports:
       - "3000:3000"
